# mxx

./: SERVER_README.md  example_config.json  example_config.toml  example_config.yaml  pyproject.toml
.github/workflows/: main-publish.yml
examples/: example_ondemand_job.toml  example_scheduled_job.toml  example_usage.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/mxx/cfg_tool/: app.py  cfg.py
src/mxx/runner/core/: registry.py  runner.py
src/mxx/server/: schedule.py  scheduler.py
tests/: __init__.py  test_initialization.py  test_integration_notepad.py  test_runner_behavior.py
