[project]
name = "mxx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ZackaryW", email = "36378555+ZackaryW@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
    "tomli>=2.3.0",
]

[project.scripts]
mxx = "mxx:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "psutil>=7.1.2",
    "pytest>=8.4.2",
]
